--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     </header>
     <article>
         <h2>Curso de HTML5 com CSS3</h2>
+        <p><a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o">Acesse o curso de HTML5</a></p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, cupiditate. Soluta, optio pariatur! Dolor quasi nemo, ipsum unde, doloribus autem aliquid laboriosam dignissimos inventore expedita, tempore aspernatur nostrum incidunt voluptatem!</p>
     </article>
     <article>
         <h2>Curso JavaScript</h2>
+        <P><a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1">Acesse o curso de JavaScript</a></P>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, numquam ullam? Aut, cumque inventore ipsa architecto ipsam dolore libero aliquid ad autem alias culpa voluptate obcaecati minima accusamus itaque consectetur.</p>
     </article>
 </main>
